--- a/CarneadesIntoDung.cabal
+++ b/CarneadesIntoDung.cabal
@@ -1,50 +1,88 @@
+cabal-version: 3.0
 name:          CarneadesIntoDung
-category:      Argumentation, Embedded, AI
-version:       1.0
-license:       BSD3
-cabal-version: >= 1.6
+version:       2.0.0.0
+license:       BSD-3-Clause
 license-file:  LICENSE
 author:        Bas van Gijzel, Henrik Nilsson
-maintainer:    Bas van Gijzel <bmv@cs.nott.ac.uk>
+maintainer:    Bas van Gijzel <nenekotan+git@gmail.com>
+copyright:     Copyright (C) 2014-2026 Bas van Gijzel
 stability:     experimental
-homepage:      http://www.cs.nott.ac.uk/~bmv/CarneadesIntoDung/
-copyright:     Copyright (C) 2014 Bas van Gijzel
+category:      Argumentation, Embedded, AI
+homepage:      https://github.com/nebasuke/CarneadesIntoDung
 synopsis:      A translation from the Carneades argumentation model into Dung's AFs.
-description:   A translation from the Carneades argumentation model 
-               (<http://hackage.haskell.org/package/CarneadesDSL>) into Dung's 
-               argumentation frameworks (<http://hackage.haskell.org/package/Dung>). 
-               This package provides a translation function and correspondence
-               properties. For the papers accompanying this library see 
-               \"Towards a framework for the implementation and verification of 
-               translations between argumentation models\" and \"A principled 
-               approach to the implementation of argumentation models\",
-               available at <http://www.cs.nott.ac.uk/~bmv/CarneadesIntoDung/>.
+description:
+  A translation from the Carneades argumentation model
+  (<http://hackage.haskell.org/package/CarneadesDSL>) into Dung's
+  argumentation frameworks (<http://hackage.haskell.org/package/Dung>).
+  This package provides a translation function and correspondence
+  properties. For the papers accompanying this library see "Towards a
+  framework for the implementation and verification of translations
+  between argumentation models" and "A principled approach to the
+  implementation of argumentation models", available at
+  <https://scholar.google.com/citations?user=Xu4yjvwAAAAJ&hl>.
 build-type:    Simple
+tested-with:   GHC == 9.4.8, GHC == 9.6.6, GHC == 9.8.4, GHC == 9.10.1
 
-Extra-Source-Files:
-                           CHANGELOG
-                           examplecaes.txt
+extra-doc-files:
+  README.md
+  CHANGELOG.md
 
-Library
+extra-source-files:
+  LICENSE
+  examplecaes.txt
+  exampleaf.txt
+
+source-repository head
+  type:     git
+  location: https://github.com/nebasuke/CarneadesIntoDung
+
+common warnings
+  ghc-options:
+    -Wall
+    -Wcompat
+    -Widentities
+    -Wincomplete-record-updates
+    -Wincomplete-uni-patterns
+    -Wredundant-constraints
+  default-language: Haskell2010
+
+library
+  import:           warnings
+  hs-source-dirs:   src
   build-depends:
-    base                   >= 4        && < 5,
-    containers             >= 0.3      && < 0.6,
-    fgl                    >= 5.4.2.4,
-    cmdargs                >= 0.10.2,
-    CarneadesDSL           >= 1.3,
-    Dung                   >= 1.0.0.1
-    
-  hs-source-dirs:
-    src
-
+    base         >= 4.16 && < 5,
+    containers   >= 0.6  && < 0.8,
+    fgl          >= 5.7  && < 5.9,
+    CarneadesDSL >= 2.0  && < 2.1,
+    Dung         >= 2.0  && < 2.1
   exposed-modules:
     Language.CarneadesIntoDung.Translation
     Language.CarneadesIntoDung.Examples
 
-Executable caell
-  main-Is:                 Main.hs
-  hs-source-dirs:          src
+executable caell
+  import:           warnings
+  main-is:          Main.hs
+  hs-source-dirs:   app
+  build-depends:
+    base                 >= 4.16 && < 5,
+    CarneadesIntoDung,
+    CarneadesDSL         >= 2.0  && < 2.1,
+    Dung                 >= 2.0  && < 2.1,
+    optparse-applicative >= 0.17 && < 0.19
+  ghc-options:      -threaded
 
-source-repository head
-  Type:     git
-  Location: https://github.com/nebasuke/CarneadesIntoDung
+test-suite carneadesintodung-tests
+  import:           warnings
+  type:             exitcode-stdio-1.0
+  main-is:          Main.hs
+  hs-source-dirs:   test
+  build-depends:
+    base              >= 4.16 && < 5,
+    CarneadesIntoDung,
+    CarneadesDSL      >= 2.0  && < 2.1,
+    Dung              >= 2.0  && < 2.1,
+    containers        >= 0.6  && < 0.8,
+    tasty             >= 1.4  && < 1.6,
+    tasty-hunit       >= 0.10 && < 0.11
+  other-modules:
+    Test.Language.CarneadesIntoDung.Translation
